compilation targets set to JDK 1.8 (#56)